# dsPrivacy

./: .Rbuildignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  DESCRIPTION  NAMESPACE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  project.yml  test.yml
R/: basicFunction.R  boundedCovarianceDP.R  boundedMeanDP.R  boundedStandardDeviationDP.R  boundedSumDP.R  boundedVarianceDP.R  countDP.R  linearRegressionDP.R  maxDP.R  meanDPDS.R  medianDP.R  minDP.R  numValidDP.R  studentTestDP.R  sumDP.R  sumOfSquaresDP.R  sumSquaresDP.R  tableDP.R  zzz.R
inst/: DATASHIELD
inst/python/custom_dp/: covariance_custom.py
inst/python/dp/custom_dp/: covariance_custom.py
inst/python/dp/diffprivlib_wrapper/: linear_regression.py
inst/python/dp/pydp_wrapper/: count_PyDP.py  max_PyDP.py  mean_PyDP.py  median_PyDP.py  min_PyDP.py  standard_deviation_PyDP.py  sum_PyDP.py  variance_PyDP.py
inst/python/pydp_wrapper/: __init__.py  count_PyDP.py  max_PyDP.py  mean_PyDP.py  median_PyDP.py  min_PyDP.py  standard_deviation_PyDP.py  sum_PyDP.py  variance_PyDP.py
man/: boundedCovarianceDP.Rd  boundedMeanDP.Rd  boundedStandardDeviationDP.Rd  boundedSumDP.Rd  boundedVarianceDP.Rd  countDP.Rd  maxDP.Rd  meanDPDS.Rd  medianDP.Rd  minDP.Rd
tests/: conftest.py
tests/unit/dp/custom_dp/: covariance_custom_test.py
